able to open repo explorer but stable yet

--- a/Gitpilot/Gitpilot.csproj
+++ b/Gitpilot/Gitpilot.csproj
@@ -66,10 +66,13 @@
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Maui" Version="8.0.0" />
+        <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="System.Runtime.Caching" Version="9.0.1" />
     </ItemGroup>
 
 </Project>
