--- a/Gitpilot/Gitpilot.csproj
+++ b/Gitpilot/Gitpilot.csproj
@@ -65,6 +65,13 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Content Include="Resources\AppIcon\GitpilotIcon.png">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="CommunityToolkit.Maui" Version="8.0.0" />
         <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
