--- a/Gitpilot/Gitpilot.csproj
+++ b/Gitpilot/Gitpilot.csproj
@@ -88,6 +88,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
         <PackageReference Include="System.Runtime.Caching" Version="9.0.1" />
     </ItemGroup>
 
