--- a/Gitpilot/Gitpilot.csproj
+++ b/Gitpilot/Gitpilot.csproj
@@ -82,6 +82,7 @@
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Maui" Version="8.0.0" />
+        <PackageReference Include="IEnumerable.ForEach" Version="1.0.0" />
         <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
